# wisper_sample

./: README.md  main.py  pyproject.toml
